<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Dollar sign -->
            <TextView
                android:id="@+id/label_dollar_sign"
                android:text="@string/unit_dollar_sign"
                android:paddingTop="12dp"
                android:paddingLeft="8dp"
                style="@style/EditorUnitsStyle" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_dollars"
                android:inputType="number"
                android:paddingLeft="20dp"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <Button
                android:id="@+id/button_minus"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="-"/>
            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/EditorFieldStyle" />
            <Button
                android:id="@+id/button_plus"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="+"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Image category -->
    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_image"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Select image button -->
            <Button
                android:id="@+id/edit_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_image"/>

            <ImageView
                android:id="@+id/edit_image_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitCenter"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
