<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/activity_margin" >
    <!--  descendantFocusability required so that each list item can still be clicked while there
    is a descendant button -->

    <ImageView
        android:id="@+id/image"
        android:contentDescription="@string/product_image_description"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1.25"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        android:layout_weight="1.25">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:maxEms="5"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="Theraband"/>
        <TextView
            android:id="@+id/supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:maxEms="5"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="DJO Global"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_per_unit"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="$5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"/>
        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="20"/>
        <Button
            android:id="@+id/button_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/button_sale"/>
    </LinearLayout>

</LinearLayout>